<resources>
    <string name="app_name">Recipes</string>
    <string name="allRecipes">Все рецепты</string>
    <string name="favorites">Избранное</string>
    <string name="contest">Конкурс</string>
    <string name="marks">Обозначения</string>
    <string name="cooking">a man cooking somwthing</string>
    <string name="content_description_media">pea soup</string>
    <string name="title">Pea soup</string>
    <string name="authorSign">Author:</string>
    <string name="action_1">Learn more</string>
    <string name="action_2">Outlets</string>
    <string name="action_3">Order</string>
    <string name="your_favorites">Your Favorites</string>
    <string name="auth">Authentication</string>
    <string name="header_title">Some Userovich</string>
    <string name="header_text">Some Emailovich</string>
    <string name="menu">Drawer Menu</string>
    <string name="search">search</string>
    <string name="content_description_filter">Content description filter</string>
    <string name="page_title">Все рецепты</string>
    <string name="authentication">Authentication</string>
    <string name="join">JOIN</string>
    <string name="lock">lock</string>
    <string name="enter_your_name">Enter your nickname</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="signin">Sign in</string>
    <string name="description">Button to create new Recipe</string>
    <string name="categorySign">Category:</string>
    <string name="likes">likes</string>
    <string name="shares">shares</string>
    <string name="remove_this">Remove this</string>
    <string name="edit">Edit this</string>
    <string name="design_your_password">Enter your password</string>
    <string name="signingin">Sign in</string>
    <string name="isMine">Shown if it is mine</string>
    <string name="content">some content</string>
    <string name="contentlable">Рецепт блюда</string>
    <string name="actions">Действия</string>
    <string name="infotitle">Общая информация о популярности рецепта</string>
    <string name="likesinfo">Quantity of Likes</string>
    <string name="favoritesinfo">In favorites</string>
    <string name="dislikes">Dislike this</string>
    <string name="sharesinfo">Quantity of Shares</string>
    <string name="dislikesinfo">Quantity of Dislikes</string>
    <string name="stepsTitle">Шаги приготовления</string>
    <string name="stepsContent1">Шаг 1:</string>
    <string name="stepsContent10">Шаг 10</string>
    <string name="stepsContent9">Шаг 9</string>
    <string name="stepsContent8">Шаг 8</string>
    <string name="stepsContent7">Шаг 7</string>
    <string name="stepsContent6">Шаг 6</string>
    <string name="stepsContent5">Шаг 5</string>
    <string name="stepsContent4">Шаг 4</string>
    <string name="stepsContent3">Шаг 3</string>
    <string name="stepsContent2">Шаг 2</string>
    <string name="give_a_title_to_the_recipe">Give a title to the recipe</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="creating_a_recipe">Creating a Recipe</string>
    <string name="giveReference">A Reference to Image</string>
    <string name="givenReference">Give a Ref to Image</string>
    <string name="giveContent">The Recipe itself</string>
    <string name="givenContent">Type Content for the Recipe: not more than 1000 letters</string>
    <string name="giveSteps">Cooking Roadmap</string>
    <string name="step1">Step 1</string>
    <string name="step2">Step 2</string>
    <string name="step10">Step 10</string>
    <string name="step9">Step 9</string>
    <string name="step8">Step 8</string>
    <string name="step7">Step 7</string>
    <string name="step6">Step 6</string>
    <string name="step5">Step 5</string>
    <string name="step4">Step 4</string>
    <string name="step3">Step 3</string>
    <string name="save">Save</string>
    <string name="recipeCategory">Recipe Category</string>
    <string name="label_1">EUROPEAN</string>
    <string name="asian">ASIAN</string>
    <string name="panasian">PANASIAN</string>
    <string name="eastern">EASTERN</string>
    <string name="american">AMERICAN</string>
    <string name="russian">RUSSIAN</string>
    <string name="mediterranean">MEDITERRANEAN</string>
    <string name="step10hint">Type step 10 here</string>
    <string name="step9hint">Type step 9 here</string>
    <string name="step8hint">Type step 8 here</string>
    <string name="step7hint">Type step 7 here</string>
    <string name="step6hint">Type step 6 here</string>
    <string name="step5hint">Type step 5 here</string>
    <string name="step4hint">Type step 4 here</string>
    <string name="step3hint">Type step 3 here</string>
    <string name="step2hint">Type step 2 here</string>
    <string name="step1hint">Type step 1 here</string>
    <string name="filter">filter</string>
    <string name="content_description_search">Searching</string>
    <string name="some_userovich">Some Userovich</string>
    <string name="some_emailovich">Some Emailovich</string>
    <string name="long_message">It is no such User ((</string>
    <string name="accept">Dismiss</string>
    <string name="dialogtitle">Bad news</string>
    <string name="firstDialogTitle">Как с этим работать</string>
    <string name="firstDialogDismiss">Понятно</string>
    <string name="wholeText">Приветствуем Вас!\n\nВы попали в книгу рецептов.\n\nВ данный момент Вы не идентифицированы.\n\nЧтобы пользоваться всеми фичвми сервиса (отправлять рецепты в Избранное, лайкать, дизлайкать или делиться чужими рецептами, а также добавлять свои), сделайте левый свайп и либо зарегистрируйтесь, либо пройдите аутентификацию.\n\nНо, если Вы хотите просто посмотреть, то проходить аутентификацию или регистрироваться не обязательно.\n\nУспехов!</string>
    <string name="createReciprDialogError">Ошибка! рецепт не сохранен</string>
    <string name="createReciprDialogSuccess">Good job!</string>
    <string name="SuccessMessage">Рецепт добавлен.</string>
    <string name="noCategoryAdded">Вы забыли выбрать категорию</string>
    <string name="undestood">Понятно</string>
    <string name="SuccessMessageUpdate">Рецепт изменен!</string>
    <string name="buttonSearch">Search</string>
    <string name="searchWhat">Type what you are looking for</string>
    <string name="noSearch">404 \nрецептов с такими параментрами\n не найдено</string>
    <string name="asianChip">ASIAN</string>
    <string name="americanChip">AMERICAN</string>
    <string name="easternChip">EASTERN</string>
    <string name="panasianChip">PANASIAN</string>
    <string name="mediterraneanChip">MEDITERRANEAN</string>
    <string name="russianChip">RUSSIAN</string>
    <string name="europeanChip">EUROPEAN</string>
    <string name="chooseChips">Choose categories</string>
    <string name="noFilter">404 \nрецептов таких категорий\n не найдено</string>
    <string name="noFavors">404 \nУ Вас пока нет Избранных рецептов.\nТапните по звездочке соответствующего рецепта, чтобы добавить его в Избранное</string>


</resources>