<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/lock"
        android:layout_marginTop="40dp"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:visibility="visible"
        app:icon="@drawable/ic_baseline_lock_person_24"
        android:contentDescription="@string/lock"
        style="@style/Widget.AppTheme.favoritesCheckBox" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/unlocked"
        android:layout_marginTop="40dp"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:icon="@drawable/ic_baseline_lock_open_24"
        android:contentDescription="@string/lock"
        style="@style/Widget.AppTheme.favoritesCheckBox" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/some_userovich"
        android:visibility="visible"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/some_emailovich"
        android:visibility="visible"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="@color/material_on_surface_emphasis_medium" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
 />
</LinearLayout>